# purplecoin

./: .gitattributes  .gitignore  AUTHORS  BUILDING.md  COPYRIGHT  Cargo.toml  Dockerfile  README.md  ROADMAP.md  build.rs  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: accumulator.rs  vm.rs
data/: genesisbalances.mainnet.sha256_197bb59e3dfc07d820f3e3cc64409c4a6b6eef3c79e448fa84eef89be92ae468.blake3_8741ab9e5bae2aef39543a2a251a94662c5f5927c346d5dfef5aabbec489f7af.txt  genesisbalances.mainnet.sha256_797a0da5e546ed2e56bf2b12021a838822e5a4584307680bf3a609342b0cac60.blake3_3bf03d0b3facbffc5c98982f44e2c20e931c2d643af871590b5198b3bf136092.txt  genesisbalances.mainnet.sha256_806d5b429966d975b1957628ec1275043697fdc0df9850d487525f07e0357280.blake3_3607b3b126b0bd0a3302b2e6ae1f909ebf0661b47944e215acfb2c061ef90983.txt  genesisbalances.mainnet.sha256_9d0ac2f6ec49505b96e45bd9ba6403af7070d3ffd4b2354fea84d234692de1d6.blake3_f3e39c1c86683334231f7d832ec17388b96fd9500f107dd8e4efbf61a863b536.txt  genesisbalances.mainnet.sha256_a3dad0bed27f5d2fd8f5e278ff7d46997ffc5df0d43c351b416c6931c3136f34.blake3_913b1c3d0e4d2de1c77f6a80907a7d80321486548311c798f7dd3b885ca82036.txt  genesisbalances.testnet.sha256_294e7f0ba5654eedd09cb02d8fe272a11549425f58e4cca3967597173fa051d5.blake3_d0beb318430812f90291a65355403c50dcc08152e07c48e6e92f53d9f8d70cfa.txt  genesisbalances.testnet.sha256_57e4c01400a9af2e28e0f76e4ff7f7d7001bc012bb14934776193d00ca118def.blake3_1c8021242b1bb0495b88fadfabb0bdf2405cb1a7b6dd093fe65592ae2ffda5db.txt  genesisbalances.testnet.sha256_dd35493dbb97e1062fd7c4779977c4e0f309b4b2728e09916bd62505c66e5917.blake3_4de3d1f680251ce49332a4d256bc973fdc7648337ee154250ba9777bbd4a4eeb.txt
doc/: assets.md  consensus.md  contributing.md  crowdsale.md  dex.md  mining.md  nomenclature.md  scripting.md  state.md  tokenomics.md  vision.md
hash_sys/: Cargo.toml  build.rs
hash_sys/c_src/: compat.h  fugue.c  fugue.h  gr.cpp  gr.h  hash.cpp  hash.h  hash_selection.cpp  prevector.h  serialize.h  tinyformat.h  uint256.cpp  uint256.h  utilstrencodings.cpp  utilstrencodings.h  version.h
hash_sys/c_src/compat/: byteswap.h  endian.h
hash_sys/c_src/crypto/: common.h  endian.h  hmac_sha512.cpp  hmac_sha512.h  md_helper.c  ripemd160.cpp  ripemd160.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h  sph_blake.h  sph_bmw.h  sph_echo.h  sph_groestl.h  sph_hamsi.c  sph_jh.h  sph_luffa.h  sph_sha2.c  sph_sha2.h  sph_shabal.c  sph_shabal.h  sph_shavite.h  sph_simd.h  sph_skein.h
hash_sys/c_src/cryptonote/: aesb.c  config.hpp  groestl_tables.h  hash-ops.c  oaes_config.h  oaes_lib.c  skein_port.h  slow-hash.c  stringize.hpp  warnings.h
hash_sys/src/: lib.rs
iblt_sys/: Cargo.toml  build.rs
iblt_sys/cpp_src/: COPYING  iblt.cpp  iblt.h  murmurhash3.cpp  murmurhash3.h
iblt_sys/src/: lib.rs
src/: codec.rs  global.rs  lib.rs  main.rs  settings.rs
src/chain/: chain.rs  chain_config.rs  mod.rs  sector.rs  shard.rs
src/chain/backend/: disk.rs  memory.rs  memory_store.rs  mod.rs
src/chain/mmr/: leaf_set.rs  merkle_proof.rs  mod.rs  prune_list.rs  util.rs
src/consensus/: mod.rs  rules.rs
src/gui/: choose_wallet_creation.rs  create_wallet.rs  import_wallet_file.rs  import_wallet_private_key.rs  mod.rs  overview.rs  send_and_receive.rs  settings.rs  theme.rs  trade.rs  welcome.rs
src/miner/: mod.rs
src/node/: mempool.rs  mod.rs  peer_info.rs  rpc.rs  rw_socket.rs
src/node/behaviour/: cluster.rs  exchange.rs  mod.rs  sector.rs
src/node/request_peer/: codec.rs  payload.rs
src/node/sector/: mod.rs
src/node/sector/get_shard_headers/: codec.rs  mod.rs  payload.rs
src/node/sector/request_peer/: codec.rs  mod.rs
src/primitives/: block.rs  common.rs  hash.rs  iblt.rs  input.rs  mod.rs  output.rs  transaction.rs  util.rs
src/vm/: bifs.rs  mod.rs  opcodes.rs  script.rs  sig_verification.rs
src/vm/internal/: mod.rs  term.rs
src/wallet/: mod.rs
