cargo-features = ["profile-rustflags"]

[package]
name = "purplecoin"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/purpleprotocol/purplecoin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
blake2 = "0.10.4"
blake3 = "1.3.1"
sha2 = "0.10.2"
sha3 = "0.10.1"
web-sys = "0.3.53"
jh-x86_64 = "0.2.2"
hash-sys = { path = "./hash_sys" }
schnorrkel = { path = "./vendor/schnorrkel" }
accumulator = { path = "./vendor/accumulator" }
arrayvec = "0.7.2"
merkletree = "0.22.0"
num_cpus = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
bindgen = { version = "0.60.1", default-features = false }
bincode = { path = "./vendor/bincode" }
lazy_static = "1.4.0"
bech32 = "0.9.0"
ed25519-dalek = { version = "2.1.1", features = ["batch"] }
mimalloc = { version = "0.1.39", default-features = false }
hex = "0.4.3"
base64 = "0.13.1"
chrono = "0.4.19"
triomphe = "0.1.7"
crossbeam-channel = "0.5.4"
rust_decimal = "1.34.2"
rust_decimal_macros = "1.34.2"
ripemd = "0.1.1"
argon2rs = "0.2.5"
zeroize = { version = "1.4.3", features = ["zeroize_derive"] }
dirs = "4.0.0"
chacha20poly1305 = "0.9.0"
rpassword = "6.0"
num-traits = "0.2"
num-derive = "0.3"
bitflags = "1.3.2"
ibig = "0.3.5"
static_assertions = "1.1.0"
parking_lot = "0.12.1"
lru = "0.12.2"
jump-consistent-hash = "0.1.0"
anyhow = "1.0.62"
regex = "1.9.3"
fancy-regex = "0.11.0"
async-channel = "1.9.0"
streaming-iterator = "0.1.9"
qp-trie = "0.8.1"
trust-dns-resolver = "0.22.0"
bitvec = "1.0.1"
futures = "0.3"
tarpc = { version = "0.31", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3.3"
rayon = "1.5.3"
bytes = "1.4.0"
libp2p = { version = "0.51.3", features = [
    "ping",
    "identify",
    "kad",
    "mplex",
    "mdns",
    "yamux",
    "macros",
    "tcp",
    "tokio",
    "noise",
    "request-response",
    "gossipsub"
]}
async-trait = "0.1"
either = "1.8.1"
bloomfilter = "1.0.9"
croaring = "0.8.1"
dashmap = "5.5.3"
itertools = "0.10.5"
pretty_env_logger = "0.4.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5.1"
serde_yaml = "0.9.31"
toml = "0.5.9"
tiny-bip39 = "1.0.0"
libsecp256k1 = "0.7.1"
secp256k1 = { version = "0.28.0", features = ["rand-std"] }
struct-field-names-as-array = "0.1.3"
headers = "0.3"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "log",
] }
tracing-opentelemetry = { version = "0.17.2", default-features = false }
opentelemetry = { version = "0.17.0", default-features = false, features = [
    "rt-tokio",
] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
constant_time_eq = "0.2.4"
bs58 = "0.4.0"
simdutf8 = "0.1.4"

[dependencies.xxhash-rust]
version = "0.8.6"
features = ["xxh3", "const_xxh3"]

[dependencies.rocksdb]
git = "https://github.com/rust-rocksdb/rust-rocksdb.git"

[target.'cfg(not(windows))'.dependencies]
signal-hook = "0.3.4"

[dev-dependencies]
serial_test = "*"
criterion = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
fluent-asserter = "0.1.9"

[features]
default = ["miner", "wallet", "rpc", "disk", "blake3sum", "runtime-clang"]
sha256sum = []
blake3sum = []
cli = []
miner = []
wallet = []
rpc = []
disk = []
memory = []
disable_tests_on_windows = []
runtime-clang = ["bindgen/runtime"]
static-clang = ["bindgen/static"]

[profile.test]
opt-level = 0
overflow-checks = false
strip = "debuginfo"

[profile.dev]
opt-level = 0
overflow-checks = false
strip = "debuginfo"
panic = "abort"

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = false
strip = "debuginfo"
panic = "abort"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "fat"
overflow-checks = false
strip = "debuginfo"
codegen-units = 1

[[bench]]
name = "accumulator"
harness = false

[[bench]]
name = "vm"
harness = false
